# cgx-reactor

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile
docs/: architecture.md  glossary.md  roadmap.md
embedded_benchmarks/rp2040/trigger_lookup/: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  pico_clock.hpp
examples/: CMakeLists.txt
examples/basic/: CMakeLists.txt  main.cpp
examples/channel/: CMakeLists.txt  main.cpp
examples/error_handling/: CMakeLists.txt  main.cpp
examples/instance_trigger/: CMakeLists.txt  main.cpp
examples/logger/: CMakeLists.txt  main.cpp
examples/member_task/: CMakeLists.txt  main.cpp
examples/rp2040_pico/: CMakeLists.txt  Makefile  README.md  main.cpp
examples/scratchpad/: CMakeLists.txt  main.cpp
examples/timer/: CMakeLists.txt  main.cpp
gtests/: CMakeLists.txt  mock_clock.hpp  test_channel.cpp  test_clock.cpp  test_engine_interface.cpp  test_instance_trigger.cpp  test_logger.cpp  test_member_task.cpp  test_scratchpad.cpp  test_signal.cpp  test_task.cpp  test_timer.cpp
include/cgx/: reactor.hpp
include/cgx/reactor/: channel.hpp  clock.hpp  config.hpp  engine.hpp  error.hpp  logger.hpp  signal.hpp  task.hpp  task_list.hpp  timer.hpp
tools/pico/: README.md  SKILL.md  pico
